Update marquee text with new message

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a{color:#ffe600;text-decoration:underline}
     <div class="tabs" id="tabs"></div>
   </div>
 
-  <div class="marquee"><span>Husk ID, kontanter (RSD), gode sko og godt humør. Sig “Živeli!” når glassene løftes.</span></div>
+  <div class="marquee"><span>💀 Slavic hardbass loading… Burek and rakija required for entry 💀</span></div>
 
   <div class="btnbar">
     <button id="dl" class="btn alt">Download offline</button>
